--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@sveltejs/kit": "^1.20.4",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tweetnacl": "^1.0.3",
+		"tweetnacl-util": "^0.15.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
