--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-	"name": "try-encryption-libs",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tweetnacl": "^1.0.3",
-		"tweetnacl-util": "^0.15.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"wasm-themis": "^0.15.0",
-		"ws": "^8.13.0"
-	},
-	"type": "module"
+  "name": "try-encryption-libs",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@noble/hashes": "^1.3.1",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.20.4",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.2",
+    "wasm-themis": "^0.15.0",
+    "ws": "^8.13.0"
+  },
+  "type": "module"
 }
